Fix the spacing on recipe instruction and ingredient display

--- a/app/assets/stylesheets/recipe_detail.css
+++ b/app/assets/stylesheets/recipe_detail.css
@@ -51,6 +51,10 @@ section.recipe-info em {
 section.recipe-info strong, section.recipe-info h3 {
   font-weight: 700;
 }
-section.recipe-info p {
+section.recipe-info ul {
   margin: 20px 0 0 0;
+}
+
+section.recipe-info li {
+  padding: 5px;
 }
